# Solina

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
conversions/: Cargo.toml
conversions/src/: types.rs  utils.rs
eth-wallet/: Cargo.toml
eth-wallet/src/: crypto.rs  lib.rs  main.rs  proof.rs  signature_proof.rs  types.rs  utils.rs  wallet.rs
intent/: Cargo.toml
intent/src/: circuit.rs  intent.rs  lib.rs  solver.rs  swap_intent.rs  swap_solver.rs  witness.rs
merkle-tree/: Cargo.toml
merkle-tree/src/: lib.rs  tests.rs  tree_circuit_generation.rs  utils.rs
mock-wallet/: Cargo.toml  README.md
mock-wallet/src/: crypto.rs  lib.rs  main.rs
solina/: Cargo.toml
solina-zkvm/host/: Cargo.toml
solina-zkvm/host/src/: main.rs
solina-zkvm/methods/: Cargo.toml
solina-zkvm/methods/guest/: Cargo.toml
solina-zkvm/methods/guest/src/: lib.rs  swap_challenger.rs  swap_intent.rs  swap_solver.rs
solina/src/: challenger.rs  circuit.rs  error.rs  intent.rs  lib.rs  solver.rs  structured_hash.rs  witness.rs
structured-hash/: Cargo.toml
structured-hash/src/: encode_values.rs  lib.rs  types.rs
swap-intent/: Cargo.toml
types/: Cargo.toml
types/src/: error.rs  types.rs
zkvm/host/: Cargo.toml
zkvm/methods/guest/: Cargo.toml
