[package]
name = "solina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"

types = { path = "../types" }
plonky2 = "0.1.3"
plonky2_ecdsa = "0.1.0"
num-bigint = "0.4.3"
serde = "1.0.163"
keccak-hash = "0.10.0"
